# esp-hal-community

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE-MIT  README.md  justfile  rust-toolchain-risc-v.toml
.cargo/: config.toml
.github/actions/check-package/: action.yml
.github/workflows/: ci.yml
esp-hal-buzzer/: CHANGELOG.md  Cargo.toml  README.md
esp-hal-buzzer/examples/: buzzer.rs
esp-hal-buzzer/src/: lib.rs
esp-hal-smartled/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
esp-hal-smartled/.cargo/: config.toml
esp-hal-smartled/examples/: hello_rgb.rs  hello_rgb_async.rs  hello_rgbw.rs
esp-hal-smartled/src/: lib.rs
